AM_CPPFLAGS = -I.
AM_LDFLAGS = -ljson-c -Wall -Werror

bin_PROGRAMS = td
td_SOURCES =\
	   	array.c\
	   	cmd.c\
	   	item.c\
	   	log.c\
	   	serialize.c\
	   	td.c\
	   	commands/add.c\
	   	commands/delete.c\
	   	commands/edit.c\
	   	commands/finish.c\
	   	commands/help.c\
	   	commands/ls.c\
	   	commands/mv.c\
	   	commands/sort.c\
	   	commands/swap.c

noinst_HEADERS =\
		array.h\
		cmd.h\
		item.h\
		log.h\
		serialize.h
